--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
-    "openai>=2.1.0",
+    "openai[realtime]>=2.1.0",
     "streamstore>=5.0.0",
 ]
